--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Siam U Todo</h1>
+        <h1>Todo-Webapp</h1>
     </header>
 
     <div id="todo-container">
